--- a/csharp-services/GlobalMotors.OrdersService/GlobalMotors.OrdersService.csproj
+++ b/csharp-services/GlobalMotors.OrdersService/GlobalMotors.OrdersService.csproj
@@ -15,7 +15,8 @@
     </PackageReference>
     <PackageReference Include="Npgsql" Version="9.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="9.0.1" />
   </ItemGroup>
 
 </Project>
