--- a/java-services/currencies-service/src/main/resources/application.properties
+++ b/java-services/currencies-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=currencies-service
 server.port=8100
 
-spring.datasource.url=jdbc:postgresql://localhost/db_currency_gm
+spring.datasource.url=jdbc:postgresql://localhost/global_motors
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=none
@@ -9,9 +9,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
-#TODO REVISAR 
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-#eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
 
 spring.cloud.openfeign.circuitbreaker.enabled=true
 
