finaliza users-service

--- a/csharp-services/GlobalMotors.UsersService/appsettings.json
+++ b/csharp-services/GlobalMotors.UsersService/appsettings.json
@@ -1,9 +1,32 @@
 {
+  "spring": {
+    "application": {
+      "name": "user-services" // This is the name that will appear in Eureka
+    }
+  },
+  "eureka": {
+    "client": {
+      "serviceUrl": "http://localhost:8761/eureka/", // URL of your Eureka server
+      "shouldFetchRegistry": true, // If your .NET app needs to discover other services
+      "shouldRegisterWithEureka": true, // Set to true to register with Eureka
+      "validateCertificates": true // Set to true for HTTPS with valid certs
+    },
+    "instance": {
+      "preferIpAddress": true, // Optional: register with IP address instead of hostname
+      "port": "5225",
+      "ipAddress": "localhost",
+      "statusPageUrlPath": "/swagger",
+      "healthCheckUrlPath": "/health"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=global_motors;User Id=postgres;Password=postgres;"
   },
   "AllowedHosts": "*"
 }
