--- a/csharp-services/GlobalMotors.UsersService/Properties/launchSettings.json
+++ b/csharp-services/GlobalMotors.UsersService/Properties/launchSettings.json
@@ -19,10 +19,20 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "http production": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": false,
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5225",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      }
+    },
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7184;http://localhost:5220",
       "environmentVariables": {
