pequeno ajuste no nome exposto do servico

--- a/csharp-services/GlobalMotors.UsersService/appsettings.json
+++ b/csharp-services/GlobalMotors.UsersService/appsettings.json
@@ -1,7 +1,7 @@
 {
   "spring": {
     "application": {
-      "name": "user-services" // This is the name that will appear in Eureka
+      "name": "user-service" // This is the name that will appear in Eureka
     }
   },
   "eureka": {
