--- a/csharp-services/GlobalMotors.UsersService/Properties/launchSettings.json
+++ b/csharp-services/GlobalMotors.UsersService/Properties/launchSettings.json
@@ -32,7 +32,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7184;http://localhost:5220",
       "environmentVariables": {
