--- a/java-services/cars-service/src/main/resources/application.properties
+++ b/java-services/cars-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8000
 
 spring.datasource.url=jdbc:postgresql://localhost/global_motors
 spring.datasource.username=postgres
-spring.datasource.password=20032006
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
