--- a/csharp-services/GlobalMotors.AddressesService/appsettings.json
+++ b/csharp-services/GlobalMotors.AddressesService/appsettings.json
@@ -1,7 +1,7 @@
 {
   "spring": {
     "application": {
-      "name": "orders-service" // This is the name that will appear in Eureka
+      "name": "addresses-service" // This is the name that will appear in Eureka
     }
   },
   "eureka": {
@@ -26,7 +26,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=global_motors_orders;User Id=postgres;Password=postgres;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=global_motors_addresses;User Id=postgres;Password=postgres;"
   },
   "AllowedHosts": "*"
 }
