ajustes de dto e criacao de migrations no servico de auth

--- a/csharp-services/GlobalMotors.AuthService/appsettings.json
+++ b/csharp-services/GlobalMotors.AuthService/appsettings.json
@@ -13,7 +13,7 @@
     },
     "instance": {
       "preferIpAddress": true, // Optional: register with IP address instead of hostname
-      "port": "5235",
+      "port": "5265",
       "ipAddress": "localhost",
       "statusPageUrlPath": "/swagger",
       "healthCheckUrlPath": "/health"
@@ -27,6 +27,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=global_motors;User Id=postgres;Password=postgres;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=global_motors_auth;User Id=postgres;Password=postgres;"
   }
 }
