--- a/java-services/currencies-service/src/main/resources/application.properties
+++ b/java-services/currencies-service/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=currencies-service
 server.port=8100
 
-spring.datasource.url=jdbc:postgresql://localhost/global_motors
+spring.datasource.url=jdbc:postgresql://localhost/global_motors_currencies
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.flyway.locations=classpath:/db_migration
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
