--- a/java-services/currencies-service/src/main/resources/application.properties
+++ b/java-services/currencies-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=currencies-service
 server.port=8100
 
-spring.datasource.url=jdbc:postgresql://localhost/global_motors_currencies
+spring.datasource.url=jdbc:postgresql://localhost:5432/global_motors_currencies
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
@@ -11,8 +11,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.flyway.locations=classpath:/db_migration
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.prefer-ip-address=true
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+# eureka.instance.prefer-ip-address=true
 
 spring.cloud.openfeign.circuitbreaker.enabled=true
 
