--- a/java-services/cars-service/bin/src/main/resources/application.properties
+++ b/java-services/cars-service/bin/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=cars-service
 server.port=8000
 
-spring.datasource.url=jdbc:postgresql://localhost/global_motors
+spring.datasource.url=jdbc:postgresql://localhost/global_motors_cars
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.flyway.locations=classpath:/db_migration
