--- a/java-services/cars-service/src/main/resources/application.properties
+++ b/java-services/cars-service/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.flyway.locations=classpath:/db_migration
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+eureka.instance.status-page-url=http://localhost:8000/swagger-ui/index.html
