--- a/java-services/currencies-service/src/main/resources/application.properties
+++ b/java-services/currencies-service/src/main/resources/application.properties
@@ -11,8 +11,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.flyway.locations=classpath:/db_migration
 
-# eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-# eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+eureka.instance.status-page-url=http://localhost:8100/swagger-ui/index.html
 
 spring.cloud.openfeign.circuitbreaker.enabled=true
 
